--- a/front/project-root/my-electron-app/css/styles.css
+++ b/front/project-root/my-electron-app/css/styles.css
@@ -194,3 +194,23 @@ pre {
   display: flex; /* Visible and flexbox to center content */
   flex-direction: column;
 }
+
+#Option {
+  display: none; /* Initial state: invisible */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8); /* Semi-transparent background */
+  color: white;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+#Option.active {
+  display: flex; /* Visible and flexbox to center content */
+  flex-direction: column;
+}
